@@ -1,3 +1,12 @@
+Fri Aug 08 23:39:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaim.h:
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	* src/main.cpp:
+	  - Connection meters now appear at the bottom of gaim, no matter which
+	    area (buddy list, conversations, accounts, etc.) you're in.
+
 Fri Aug 08 23:18:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
